garage-s3/garage-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage-webui
  namespace: garage
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: garage-webui
  template:
    metadata:
      labels:
        app: garage-webui
    spec:
      containers:
        - name: garage-webui
          image: khairul169/garage-webui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3909
              name: http
          volumeMounts:
            - name: garage-config
              mountPath: /etc/garage.toml
              subPath: garage.toml
              readOnly: true
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 3909
            initialDelaySeconds: 15
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 3909
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: garage-config
          configMap:
            name: garage-config
