garage-s3/garage-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-webui
  namespace: garage
spec:
  selector:
    app: garage-webui
  ports:
    - name: http
      port: 3909
      targetPort: 3909
      protocol: TCP
