garage-s3/garage-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-webui-ingress
  namespace: garage
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - garageui.pointblank.club
      secretName: garageui-tls
  rules:
    - host: garageui.pointblank.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage-webui
                port:
                  number: 3909
